Using JS instead of Modals

--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,16 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+.modal-header
+{
+  background-color: #512DA8;
+  color: white;  
+}
+.modal-body
+{
+  background-color: #D1C4E9;
+}
+.close {
+  color: #D1C4E9; 
+  opacity: 1;
+}
